# madhelm-bgg-api

./: README.md  TODO  envrc.example  flake.nix  process-compose.yaml
.github/workflows/: build.yaml
backend/: .gitignore  Cargo.toml
backend/.sqlx/: query-0839851a7055fe3a20754ae12bdb5f2a75c45a03fa19c472ed3988b5ec223657.json  query-4035afccaba5af4ff5b6fb4e9a0ef59bd96716bc51f5ed9504709b5efd510a67.json  query-63852eceb480352f73a4c86393b60cd53f12a3e7fc5e16bddb988144973c496c.json  query-74aee89cc8e9144bfc6ee34dbc4eacc1d4eb7466decc04b7a1a513d21aa7c666.json  query-80757b3b64d1ad23f94585f31646ff0d6d0c6e866b6045675e2c8be5743809a5.json  query-944a24b480180c1378f5698a400603f12ba411d4e0bb6c37770c133b851ae8eb.json  query-a0cd3a0528356abfb53a21e3feac351881b57f13b28caf1c0964b446fa264efa.json  query-a38e6531971399bbdd475da8e068b359c733f3fb6682a7adf959d4ab86494046.json  query-aa710184e6626938ede05c94ea29dc760b1873ba542de46e5eb25a46bf4efa43.json  query-ddaba2a8b9a71dd21aba14f9eb3c8f20d1993807465ce84a42d116805e1d5d59.json
backend/migrations/: 20251015015232_initial.sql
backend/src/: bgg_api.rs  db.rs  main.rs
backend/src/resources/: api_doc.rs  branding.rs  mod.rs  search.rs  thing.rs
backend/testdata/: family-usa.xml  search-house.xml  thing-chess.xml  thing-duhr.xml
devsupport/: .gitignore  README.md  run_postgres.sh  setup_postgres.sh  setup_test_database.sh  setup_tmux.sh
nix/backend/: config.nix  options.nix
