[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
mattak = { version = "0.2.0", path = "../../mattak/mattak" }
mattak_derives = { version = "0.2.0", path = "../../mattak/mattak_derives" }

axum = { version = "< 0.8", features = ["macros", "json"] }
axum-extra = { version = "0.10.1", features = ["query", "typed-header"] }
clap = { version = "4.5.42", features = ["derive", "env"] }
quick-xml = { version = "0.38.1", features = ["async-tokio", "tokio"] }
reqwest = { version = "0.12.22", features = ["rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.12"
chrono = { version = "0.4.42", features = ["serde"] }
bounded_join_set = "0.3.0"
rand = "0.9.2"
tower = "0.5.2"
biscuit-auth = "6.0.0"
include_dir = { version = "0.7.4", features = ["metadata"] }
tower-serve-static = { version = "0.1.1", features = ["metadata"] }
tower-http = { version = "0.6.6", features = ["cors", "set-header", "trace"] }
